Move list sorting to menus

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -316,4 +316,7 @@
     <string name="settings_enable_resources">启用资源钩子</string>
     <string name="settings_enable_resources_summary"><b>警告: </b> 资源钩子已被弃用</string>
     <string name="settings_variant">变体</string>
+    <string name="menu_optimize">优化…</string>
+    <string name="menu_show_system_apps">系统应用</string>
+    <string name="menu_show_modules">模块</string>
 </resources>
