--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -343,7 +343,9 @@
     <string name="enable_scope">Enable scope</string>
     <string name="scope_not_supported">The version of LSPosed you installed does not support module scope, download new version?</string>
     <string name="settings_variant">Variant</string>
-    <string name="menu_optimize">Optimize</string>
+    <string name="menu_optimize">Optimize…</string>
     <string name="menu_show_system_apps">System apps</string>
     <string name="menu_show_modules">Modules</string>
+    <string name="menu_reboot">Reboot…</string>
+    <string name="menu_sort">Sorting…</string>
 </resources>
