--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -130,7 +130,7 @@
     <string name="app_stop">停止</string>
     <string name="compile_failed">優化失敗或返回值為空</string>
     <string name="hook_modules">強制新增模組</string>
-    <string name="hook_modules_summary">強制將模組新增進白允許名單並移出封鎖名單\n關閉此選項並不會移除已勾選的 App 標識</string>
+    <string name="hook_modules_summary">強制將模組新增進白允許名單\n關閉此選項並不會移除已勾選的 App 標識</string>
     <string name="not_installed">未安裝</string>
     <string name="support_group_telegram_channel">Telegram 頻道: @LSPosed</string>
     <string name="reboot_system">重啟至系統</string>
