--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,7 +112,6 @@
     <string name="verified_boot_active">Verified Boot is active</string>
 
     <!-- LSPd related -->
-    <string name="add_package_failed">Failed to edit, one or more settings prevent you from editing.</string>
     <string name="menu_title_compile_reset">De-optimize</string>
     <string name="menu_title_compile_speed">Optimize with Speed mode</string>
     <string name="menu_title_compile_dexopt">Optimize with Dexopt mode</string>
@@ -130,8 +129,6 @@
     <string name="app_stop">Stop it</string>
     <string name="compile_failed">Optimization failed or return value is empty</string>
     <string name="compile_failed_with_info">Optimization failed: </string>
-    <string name="hook_modules">Force hook modules</string>
-    <string name="hook_modules_summary">Force add modules to white list\nClosing this option does not remove added modules from white list</string>
     <string name="not_installed">Not installed</string>
     <string name="reboot_system">Reboot to System</string>
     <string name="pref_title_disable_modules_log">Disable modules logs</string>
@@ -164,4 +161,5 @@
     <string name="no_scope_selected">You did not select any app. Continue?</string>
     <string name="menu_show_games">Games</string>
     <string name="menu_show_modules">Modules</string>
+    <string name="failed_to_save_scope_list">Failed save scope list</string>
 </resources>
