--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -152,4 +152,6 @@
     <string name="menu_show_games">游戏</string>
     <string name="menu_show_modules">模块</string>
     <string name="failed_to_save_scope_list">作用域列表保存失败</string>
+    <string name="module_settings">模块设置</string>
+    <string name="app_description">%s\n版本：%s</string>
 </resources>
