--- a/app/src/main/res/values-zh-rHK/strings.xml
+++ b/app/src/main/res/values-zh-rHK/strings.xml
@@ -41,7 +41,6 @@
     <string name="warning_xposed_min_version">該模塊需要更新版本的 LSPosed(%d), 因此無法被激活</string>
     <string name="no_min_version_specified">該模塊未指定所需的 LSPosed 版本</string>
     <string name="warning_min_version_too_low">該模塊針對 LSPosed %1$d 版本構建 , 由於不兼容 %2$d 版本中的變更, 現已被停用</string>
-    <string name="module_launch">打開</string>
     <string name="module_app_info">應用信息</string>
     <string name="modules_app_store">在應用商店查看</string>
     <string name="module_uninstall">卸載</string>
@@ -113,15 +112,14 @@
     <string name="pref_title_disable_verbose_log">禁用詳細日誌</string>
     <string name="logs_cannot_read">無法讀取日誌: \n</string>
     <string name="app_launch">運行</string>
-    <string name="app_stop">停止</string>
     <string name="compile_failed">優化失敗或返回值為空</string>
     <string name="not_installed">未安裝</string>
     <string name="reboot_system">重啟至系統</string>
     <string name="pref_title_disable_modules_log">禁用模塊日誌</string>
     <string name="pref_disable_modules_log_summary">模塊拋出的的異常堆棧仍將正常抓取</string>
     <string name="follow_system">跟隨系統</string>
-    <string name="pure_black_dark_theme">使用純黑深色主題</string>>
-    <string name="install_timestamps">安裝於 %1$s\n更新於 %2$s</string>
+    <string name="pure_black_dark_theme">使用純黑深色主題</string><![CDATA[>
+    ]]>
     <string name="xposed_not_active">LSPosed 框架未安裝或未激活, 您可在設置中關閉狀態檢查</string>
     <string name="transparent_status_bar">透明狀態欄</string>
     <string name="sort_by_name">應用名稱</string>
