--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -163,4 +163,5 @@
     <string name="requested_by_module">Recommended</string>
     <string name="module_disabled_no_selection">Module %s has been disabled since no app selected.</string>
     <string name="android_framework">System Framework</string>
+    <string name="app_destroyed">This application has been destroyed, please make sure you download it from the official source.</string>
 </resources>
