--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -32,7 +32,6 @@
     <string name="module_is_not_activated_yet_detailed">%s 已安装, 但尚未激活</string>
     <string name="module_empty_description">(未提供介绍)</string>
     <string name="module_no_ui">该模块未提供用户界面</string>
-    <string name="xposed_module_list_updated">LSPosed 模块列表已更新</string>
     <string name="xposed_module_updated_notification_title">LSPosed 模块已更新</string>
     <string name="warning_xposed_min_version">该模块需要更新版本的 LSPosed(%d), 因此无法被激活</string>
     <string name="no_min_version_specified">该模块未指定所需的 LSPosed 版本</string>
@@ -86,10 +85,6 @@
     <string name="menu_title_compile_reset">取消优化</string>
     <string name="compile_reset_msg">清除中…</string>
     <string name="compile_speed_msg">优化中…</string>
-    <string name="notinstalled">LSPosed 框架未安装</string>
-    <string name="verified_boot_active">引导验证已启用</string>
-    <string name="verified_boot_deactivated">引导验证已禁用</string>
-    <string name="verified_boot_none">无法获取引导验证状态</string>
     <string name="done">完成！</string>
 
     <string name="pref_title_disable_verbose_log">禁用详细日志</string>
@@ -137,4 +132,6 @@
     <string name="module_disabled_no_selection">由于未选择任何应用，模块 %s 已被禁用。</string>
     <string name="android_framework">系统框架</string>
     <string name="app_destroyed">此应用程序已被损坏，请确保您从官方来源下载该应用程序。</string>
+    <string name="selinux_permissive">&lt;b&gt;警告：&lt;\/b&gt;SELinux 未处于严格模式！对此进行攻击的恶意程序可以完全控制你的设备，并可能造成你的财产损失和法律责任。</string>
+    <string name="selinux_permissive_summary">SELinux 未处于严格模式！</string>
 </resources>
